<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_back"
    android:gravity="fill_horizontal"
    android:paddingBottom="@dimen/abc_dropdownitem_text_padding_left"
    android:paddingLeft="@dimen/abc_dropdownitem_text_padding_left"
    android:paddingRight="@dimen/abc_dropdownitem_text_padding_left"
    android:paddingTop="@dimen/abc_dropdownitem_text_padding_left"
    tools:context="com.zillowsearchapp.MainActivity" >
    
    <TextView
        android:id="@+id/street_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/heading"
        android:layout_below="@+id/heading"
        android:layout_marginTop="10dp"
        android:text="@string/address_label"
        android:textColor="@color/white"
        android:textSize="@dimen/abc_action_bar_title_text_size" />

    <EditText
        android:id="@+id/street_address_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/street_address"
        android:layout_below="@+id/street_address"
        android:layout_alignRight="@+id/heading"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:hint="@string/address_hint"
        android:inputType="text"
        android:minHeight="35dp" />

    <TextView
        android:id="@+id/stAddError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/city"
        android:layout_below="@+id/street_address_val"
        android:text="@string/empty_field_error"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/street_address_val"
        android:layout_below="@+id/street_address_val"
        android:layout_marginTop="20dp"
        android:text="@string/city_label"
        android:textColor="@color/white"
        android:textSize="@dimen/abc_action_bar_title_text_size" />

    <EditText
        android:id="@+id/city_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/city"
        android:layout_below="@+id/city"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/heading"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:hint="@string/city_hint"
        android:inputType="text"
        android:minHeight="35dp" />
    
    <TextView
        android:id="@+id/cityError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/city_val"
        android:layout_below="@+id/city_val"
        android:text="@string/empty_field_error"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/city_val"
        android:layout_below="@+id/city_val"
        android:layout_marginTop="20dp"
        android:text="@string/state_label"
        android:textColor="@color/white"
        android:textSize="@dimen/abc_action_bar_title_text_size" />
    
    <Spinner
        android:id="@+id/state_Val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/state"
        android:layout_alignRight="@+id/heading"
        android:layout_below="@+id/state"
        android:background="@drawable/rounded_corners"
        android:layout_marginTop="10dp"
        android:entries="@array/state_values"
        android:hint="@string/state_hint"
        android:minHeight="35dp"
        android:minWidth="50dp" />
    
    <TextView
        android:id="@+id/stateError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/state_Val"
        android:layout_below="@+id/state_Val"
        android:text="@string/empty_field_error"
        android:textColor="@color/red"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/zillow_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/search_btn"
        android:layout_alignRight="@+id/heading"
        android:contentDescription="@string/zillow_logo_desc"
        android:minHeight="35dp"
        android:minWidth="120dp"
        android:src="@drawable/zillow_logo" />

    <View
        android:id="@+id/seperator"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_alignLeft="@+id/search_btn"
        android:layout_below="@+id/search_btn"
        android:layout_alignRight="@+id/heading"
        android:layout_marginTop="10dp"
        android:background="#c0c0c0" />

    

    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/state"
        android:layout_below="@+id/stateError"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        android:minHeight="40dip"
        android:minWidth="80dip"
        android:text="@string/search_btn_text" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="14dp"
        android:text="@string/header"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:text="@string/no_result_error"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="invisible"/>

</RelativeLayout>
