<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zillowapp.SearchActivity" >

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    
</RelativeLayout>
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zillowapp.SearchActivity" >
    <!-- <ScrollView
        android:id="@+id/scrollableContents"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer">
        android:layout_above="@+id/footer" -->
	 <android.support.v4.view.ViewPager
	     xmlns:android="http://schemas.android.com/apk/res/android"
	     android:id="@+id/pager"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_above="@+id/footer">
	     
	</android.support.v4.view.ViewPager>
	<!-- </ScrollView> -->
	<RelativeLayout
    	android:id="@+id/footer"
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:orientation="vertical"
	    android:background="@color/white"
	    android:layout_alignParentBottom="true"
	    >
    <TextView
	     android:id="@+id/zestimate1"
	     android:layout_width="wrap_content"
         android:layout_height="wrap_content"
	     android:layout_centerHorizontal="true"
         android:layout_above="@+id/zestimate2"
	     android:text="@string/zestimate_message_1"
	     android:textColor="@color/black"
	     android:textSize="@dimen/abc_text_size_caption_material" />
	 <TextView
	     android:id="@+id/zestimate2"
	     android:layout_width="wrap_content"
         android:layout_height="wrap_content"
	     android:layout_centerHorizontal="true"
	     android:text="@string/zestimate_message_2"
         android:layout_above="@+id/zestimate3"	
         android:linksClickable="true"
	     android:textColor="@color/black"
	     android:textSize="@dimen/abc_text_size_caption_material" />

	 <TextView
	     android:id="@+id/zestimate3"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:linksClickable="true"
	     android:text="@string/zestimate_message_3"
	     android:layout_alignParentBottom="true"
	     android:layout_centerHorizontal="true"
	     android:textColor="@color/black"
	     android:textSize="@dimen/abc_text_size_caption_material" />
</RelativeLayout>
</RelativeLayout>